# OncallAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mcp_servers/: __init__.py  _fixtures.py  logs_server.py  monitor_server.py
src/oncall_agent/: __init__.py  callbacks.py  context.py  dependencies.py  logging.py  main.py  middleware.py  rate_limit.py  settings.py
src/oncall_agent/api/: __init__.py  chat.py  diagnosis.py  documents.py  health.py  schemas.py
src/oncall_agent/domain/: __init__.py
src/oncall_agent/domain/chat/: __init__.py  graph.py  prompts.py  service.py  tools.py
src/oncall_agent/domain/diagnosis/: __init__.py  executor.py  graph.py  planner.py  prompts.py  replanner.py  reporter.py  service.py  state.py
src/oncall_agent/domain/knowledge/: __init__.py  indexer.py  models.py  retriever.py  splitter.py
src/oncall_agent/infra/: __init__.py  embeddings.py  llm.py  mcp.py  milvus.py
static/: app.js  index.html  styles.css
tests/integration/: test_milvus_integration.py
tests/unit/: test_chat_graph.py  test_diagnosis.py  test_error_handling.py  test_health.py  test_indexer.py  test_input_limits.py  test_mcp_provider.py  test_rate_limit.py  test_request_id.py  test_retriever.py  test_settings.py  test_smoke.py  test_splitter.py  test_token_usage.py
