[project]
name = "oncall-agent"
version = "0.1.0"
description = "智能 OnCall 运维助手:RAG 知识库问答 + AIOps 自动故障诊断"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oncall_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 错误
    "W",   # pycodestyle 警告
    "F",   # pyflakes(未使用变量/导入等)
    "I",   # import 排序(替代 isort)
    "B",   # bugbear:常见陷阱
    "UP",  # 过时语法升级
    "C4",  # comprehension 优化
    "SIM", # 可简化的代码
    "RUF", # ruff 自有规则
]
# 行长由 formatter 负责,E501 与其重复
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 需要外部服务(Milvus 等)的集成测试",
]
