[project]
name = "oncall-agent"
version = "0.1.0"
description = "智能 OnCall 运维助手:RAG 知识库问答 + AIOps 自动故障诊断"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextvars>=2.4",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "langchain-core>=1.4.7",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-qwq>=0.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "loguru>=0.7.3",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymilvus>=3.0.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oncall_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle 错误
    "W", # pycodestyle 警告
    "F", # pyflakes(未使用变量/导入等)
    "I", # import 排序(替代 isort)
    "B", # bugbear:常见陷阱
    "UP", # 过时语法升级
    "C4", # comprehension 优化
    "SIM", # 可简化的代码
    "RUF", # ruff 自有规则
]
# 行长由 formatter 负责,E501 与其重复
ignore = [
    "E501", # 行长由 formatter 负责
    "RUF001", # 中文项目:全角标点是刻意的,非笔误
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 惯用法:Depends / File 等作为参数默认值是框架要求,非 B008 陷阱
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 需要外部服务(Milvus 等)的集成测试",
]
